fix post list spacing

--- a/css/default.css
+++ b/css/default.css
@@ -37,3 +37,7 @@ div#footer {
     list-style-type: none;
     font-family: "Courier New", Courier, monospace
 }
+
+.posts li {
+    margin-bottom: 1em;
+}
